# hipeac

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .travis.yml  Dockerfile  LICENSE  Pipfile  Procfile  README.md  app.json  bitbucket-pipelines.yml  digest.py  gunicorn.config.py  manage.py  package.json  postdeploy.sh  predeploy.sh  pyproject.toml  pytest.ini  requirements.txt  tox.ini  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: codeql.yml  tests.yml
hipeac/: __init__.py  apps.py  baker_recipes.py  celery.py  context_processors.py  countries.py  forms.py  functions.py  middleware.py  mommy_recipes.py  storages.py  urls.py  urls_cc.py  validators.py  wsgi.py
hipeac/api/: renderers.py  routers.py  urls.py
hipeac/emails/: events.py  webinars.py
hipeac/migrations/: 0001_initial.py  0002_article.py  0002_auto_20180327_1605.py  0002_auto_20181129_1509.py  0002_auto_20181203_1217.py  0002_auto_20211025_1955.py  0002_member_view.py  0002_sponsor.py  0003_auto_20180906_1343.py  0003_auto_20181129_1626.py  0003_auto_20181203_1702.py  0003_auto_20211026_1126.py  0003_break.py  0003_clipping.py  0003_email.py  0004_accompanyingperson.py  0004_auto_20180327_1637.py  0004_auto_20180907_1309.py  0004_auto_20181004_1114.py  0004_auto_20181204_1113.py  0004_auto_20211029_1308.py  0005_alter_email_from_email.py  0005_auto_20180820_1212.py  0005_auto_20181011_1009.py  0005_auto_20181011_1258.py  0005_auto_20181206_1436.py  0005_dissemination.py  0005_event_redirect_url.py  0006_auto_20180820_1441.py  0006_auto_20181206_1659.py  0006_auto_20211203_1231.py  0006_webinarproposal.py  0007_auto_20181212_1215.py  0007_auto_20220131_1045.py  0007_conferenceposter.py  0007_mailinglist.py  0008_alter_metadata_options_metadata_keywords.py  0008_auto_20180827_1443.py  0008_profile_image.py  0009_alter_job_keywords_alter_membership_keywords_and_more.py  (+114 more)
hipeac/models/: __init__.py  countries.py  emails.py  files.py  generic.py  images.py  institutions.py  (+13 more)
tests/: conftest.py
(+837 files in other folders)
