[tool.poetry]
name = "hipeac"
version = "2.0.0"
description = ""
authors = ["Eneko Illarramendi <eneko@illarra.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10.0"
celery = "==4.4.7"
carbonize = "*"
cloudscraper = "*"
commonmark = "*"
coreapi = "*"
crispy-bootstrap4 = "*"
cssselect = "*"
django = {extras = ["bcrypt"], version = "~4.2.0"}
djangorestframework = "*"
djangorestframework-csv = "*"
django-allauth = "*"
django-anymail = "*"
django-compression-middleware = "*"
django-compressor = "*"
django-cors-headers = "*"
django-countries = "*"
django-crispy-forms = "*"
django-dnt = "*"
django-libsass = "*"
django-recaptcha = "*"
django-vite = "==2.1.3"
drf-writable-nested = "*"
environs = "*"
gevent = "*"
greenlet = "*"
google-cloud-language = "*"
grpcio = "*"
gunicorn = "*"
hiredis = "*"
huey = "*"
inertia-django = "*"
lxml = "*"
openpyxl = "*"
pillow = "*"
plotly = "*"
psycopg = "*"
pypdf2 = "*"
redis = "*"
requests = "*"
reportlab = "*"
sentry-sdk = "*"
svglib = "*"
twitter = "*"
whitenoise = "*"
zoomus = "*"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "*"
django-stubs = "*"
djangorestframework-stubs = "*"
flake8 = "*"
flake8-mypy = "*"
maya = "*"
model-bakery = "*"
mysqlclient = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
sqlalchemy = "*"

[tool.coverage.run]
omit = ["*apps.py", "*migrations/*", "*settings/*", "*tests/*", "*migratedata.py", "*urls.py", "*wsgi.py", "manage.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "def __repr__", "def __str__"]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov=hipeac --cov-report=html"
DJANGO_SETTINGS_MODULE = "hipeac.settings.test"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["B026", "SIM105"]
